View Issue Details

IDProjectCategoryView StatusLast Update
0023628Open CASCADEOCCT:Testspublic2013-04-29 15:21
ReporterabvAssigned ToRoman Lygin  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2012 
Product Version6.6.0 
Target Version6.6.0Fixed in Version6.6.0 
Summary0023628: Snapshots have wrong dimension when OCCT is built by VC++ 11
DescriptionWhen tests are run with OCCT built with VS 2012 (VC++ 11), 32-bit mode on Windows 7 64-bit, snapshots produced by xwd command have wrong dimension (392*392 instead of 400*400) which makes it impossible to compare images with tests produced by OCCT built by vc9.
Steps To Reproducetest blend bfuseblend A1
TagsNo tags attached.
Test case numbertest blend bfuseblend A1

Activities

kgv

2012-12-17 12:47

developer   ~0022720

Patch is ready for review in CR23628 branch.

VS2012 setting OS/image/subsystem version in the PE header to 6.0 and this cause User32 to return different values for the same call.

Patch propose to use AdjustWindowRect() WinAPI function (available since Win2K) to adjust window rectangle instead of manual GetSystemMetrics() computations.

abv

2012-12-18 18:58

manager   ~0022750

Reviewed and checked with vc11 and vc9. Please proceed with regular testing and integration

mkv

2012-12-25 14:28

tester   ~0022831

Dear BugMaster,

Branch CR23628 (and products from GIT master) was compiled on Linux and
Windows platforms and tested.

Regressions:
Not detected

Improvements:
Not detected

Testing cases:
test blend bfuseblend A1 - OK

Related Changesets

occt: master 7fe83417

2012-12-17 08:44:37

kgv


Committer: Roman Lygin Details Diff
0023628: Snapshots have wrong dimension when OCCT is built by VC++ 11

Use AdjustWindowRect() function to adjust window rectangle instead of
manual GetSystemMetrics().
Affected Issues
0023628
mod - src/Draw/Draw_Window.cxx Diff File
mod - src/WNT/WNT_Window.cxx Diff File

Issue History

Date Modified Username Field Change
2012-12-11 10:54 abv New Issue
2012-12-11 10:54 abv Assigned To => kgv
2012-12-11 11:22 abv Steps to Reproduce Updated
2012-12-17 12:47 kgv Note Added: 0022720
2012-12-17 12:47 kgv Assigned To kgv => abv
2012-12-17 12:47 kgv Status new => resolved
2012-12-18 18:58 abv Note Added: 0022750
2012-12-18 18:58 abv Assigned To abv => bugmaster
2012-12-18 18:58 abv Status resolved => reviewed
2012-12-19 12:27 mkv Assigned To bugmaster => mkv
2012-12-25 14:28 mkv Note Added: 0022831
2012-12-25 14:29 mkv Test case number => test blend bfuseblend A1
2012-12-25 14:29 mkv Assigned To mkv => bugmaster
2012-12-25 14:29 mkv Status reviewed => tested
2013-01-04 11:35 Roman Lygin Changeset attached => occt master 7fe83417
2013-01-04 11:35 Roman Lygin Assigned To bugmaster => Roman Lygin
2013-01-04 11:35 Roman Lygin Status tested => verified
2013-01-04 11:35 Roman Lygin Resolution open => fixed
2013-04-23 13:36 aiv Status verified => closed
2013-04-29 15:21 aiv Fixed in Version => 6.6.0