0023628: Snapshots have wrong dimension when OCCT is built by VC++ 11

Use AdjustWindowRect() function to adjust window rectangle instead of
manual GetSystemMetrics().